# sparse-vectors-experiments

./: .gitignore  Cargo.toml  readme.md  sparse_experiments.ipynb
src/: index.rs  main.rs  mutable_index.rs  storage.rs  vector.rs
src/sparse_index/: fixed_length_pq.rs  inverted_index.rs  mod.rs  posting.rs  search_context.rs  types.rs
src/sparse_index/common/: file_operations.rs  fixed_length_pq.rs  mmap_ops.rs  mod.rs  scored_candidate.rs  types.rs  vector.rs
src/sparse_index/immutable/: inverted_index.rs  mod.rs  persistence.rs  posting_list.rs  search_context.rs
src/sparse_index/immutable/inverted_index/: inverted_index_mmap.rs  inverted_index_ram.rs  mod.rs
src/sparse_index/mutable/: mod.rs  mutable_index.rs
